# docker_django_first

./: .env  .gitignore  Dockerfile  create_superuser.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  readme.md
data/db/base/5/: 1247  1249  1259  2224  24576  24577  24582  24583  24585  24586  24590  24592  24594  24595  24599  24601  24608  24610  24615  24617  24618  24622  24624  24626  24631  24633  24638  24640  24647  24649  24661  24663  24664  24678  24691  24692  24699  24700  24712  24713  (+42 more)
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/admin/: base.html
polls/templates/polls/: index.html  results.html
