[tool.poetry]
name = "docker-django-first"
version = "0.1.0"
description = "Dockerize django tutorial project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.13"
django = "^3.0"
psycopg2 = "^2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
