[tool.poetry]
name = "docker-django-first"
version = "0.1.0"
description = "Dockerize django tutorial project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.13"
django = "^4.0"
psycopg2 = "^2.8"
pytest = "^8.0"
pytest-django = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
