[tool.poetry]
name = "mysite"
version = "0.1.0"
description = "Dockerize django tutorial project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
django = "^4.0"
psycopg2 = "^2.8"
pytest = "^8.0"
pytest-django = "^4.0"
python-dotenv = "^1.0.1"
django-debug-toolbar = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
